src/test/resources/frontendReference/invalid/semanticErr/variables/basicTypeErr02.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:10 -- Incompatible type at 'f' (expected: INT, actual: CHAR)
